# MedScribe-AI

./: .env.example  .gitignore  Dockerfile  README.md  SYSTEM_ARCHITECTURE.md  VERIFICATION_MODULE.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
compliance/: README.md  device_description.md  gdpr_personvern.md  intended_purpose.md  risk_management.md  software_lifecycle.md
deploy/azure/: README.md
deploy/azure/k8s/: api-deployment.yaml  ingress.yaml  namespace.yaml  ollama-deployment.yaml
docs/: aidn-integration-guide.md
frontend/: package-lock.json
frontend/src/: App.tsx  api.ts  useRecorder.ts
frontend/src/verification/: VerificationDetail.tsx  VerificationList.tsx  VerificationUpload.tsx  api.ts  types.ts
scripts/: live_demo.py
src/medscribe/: __init__.py  __main__.py  cli.py  config.py  evaluation.py  observability.py  reliability.py
src/medscribe/agents/: __init__.py  base.py  clinical.py  orchestrator.py  rag.py
src/medscribe/api/: __init__.py  agent_routes.py  app.py  auth.py  auth_routes.py  dependencies.py  epj_routes.py  routes.py  schemas.py  verification_routes.py  ws.py
src/medscribe/domain/: __init__.py  enums.py  models.py  templates.py
src/medscribe/integration/: __init__.py  epj_bridge.py  epj_client.py  events.py  fhir_adapter.py  legacy_adapters.py  webhooks.py
src/medscribe/privacy/: __init__.py  data_lifecycle.py
src/medscribe/safety/: __init__.py  guardrails.py
src/medscribe/services/: __init__.py  audio_utils.py  base.py  diarization.py  factory.py  llm_ollama.py  llm_openai.py  norwegian.py  post_processing.py  structuring.py  stt_local.py  stt_streaming.py  stt_whisper.py
src/medscribe/storage/: __init__.py  database.py  repositories.py
src/medscribe/verification/: enums.py  models.py  repository.py  security.py  service.py  storage.py
src/medscribe/workflow/: __init__.py  engine.py  orchestrator.py
tests/: test_auth.py  test_domain.py  test_safety.py  test_structuring.py  test_workflow.py
