[project]
name = "medscribe-ai"
version = "0.1.0"
description = "Modular AI microservice platform for clinical documentation"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "aiosqlite>=0.20.0",       # Dev DB — swap for asyncpg in prod
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "structlog>=24.4.0",        # Structured logging (JSON)
    "python-multipart>=0.0.12", # File uploads (audio)
    "python-jose[cryptography]>=3.3.0",  # JWT auth
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "httpx>=0.27.0",  # Test client
]
local = [
    # Local LLM via Ollama
    "ollama>=0.3.0",
    # Local STT via faster-whisper (runs on CPU or GPU, no cloud)
    "faster-whisper>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "S"]
ignore = [
    "E402",  # Module imports after __future__ + docstrings
    "E501",  # Line too long — clinical prompts are naturally long
    "B008",  # Depends() in defaults — this is standard FastAPI pattern
    "B904",  # raise from — not needed for HTTP exceptions
    "F401",  # Unused imports — some kept for re-export
    "S105",  # Hardcoded password — only in dev defaults
    "S106",  # Hardcoded password — only in dev defaults
    "S107",  # Hardcoded password — only in dev defaults
    "S104",  # Binding to all interfaces — intentional for containers
    "S110",  # try-except-pass — used for graceful WebSocket handling
    "S603",  # subprocess call — ffmpeg conversion with controlled input
    "SIM105", # contextlib.suppress — keeping explicit try/except for clarity
    "F821",  # AsyncSession string annotation — valid forward reference
    "N806",  # Uppercase variable in function — constant naming convention
]
# S = bandit security checks — important for healthcare

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
